<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/drawer_search" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/drawer_list"
            android:visible="false"/>
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/drawer_report" />
        <item
            android:id="@+id/nav_booth_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/booth_drawer_sync" />
        <item
            android:id="@+id/nav_voter_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/voter_drawer_sync" />
        <item
            android:id="@+id/nav_survey_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/survey_sync" />
    </group>

    <item android:title="@string/drawer_more">
        <menu>
            <item
                android:id="@+id/nav_lang"
                android:icon="@drawable/ic_language"
                android:title="@string/drawer_lang" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/drawer_exit" />
        </menu>
    </item>

</menu>
