<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/search_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:gravity="center"
            android:text="@string/by_name"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_search_by"
            style="@style/EditText_style"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_here" />


        <LinearLayout
            android:id="@+id/ll_age_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/Header_Text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:text="@string/age_limit"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edt_min_age"
                    style="@style/EditText_style"
                    android:layout_width="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.4"
                    android:hint="@string/enter_min_limit"
                    android:inputType="number" />

                <TextView
                    style="@style/Header_Text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textColor="@color/md_black_1000" />

                <EditText
                    android:id="@+id/edt_max_age"
                    style="@style/EditText_style"
                    android:layout_width="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.4"
                    android:hint="@string/enter_max_age"
                    android:inputType="number" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:id="@+id/ll_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg_keyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/radio_marathi"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_50dp"
                    android:layout_weight="0.5"
                    android:padding="@dimen/margin_10dp"
                    android:text="@string/lang_marathi"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/text_18sp"
                    android:theme="@style/MyRadioButton" />

                <RadioButton
                    android:id="@+id/radio_english"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_50dp"
                    android:layout_weight="0.5"
                    android:padding="@dimen/margin_10dp"
                    android:text="@string/lang_english"
                    android:checked="true"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/text_18sp"
                    android:theme="@style/MyRadioButton" />
            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            style="@style/Button_style"
            android:layout_width="match_parent"
            android:text="@string/drawer_search" />

        <TextView
            android:id="@+id/txt_no_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:gravity="center"
            android:text="@string/search_result"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <!-- <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/md_black_1000" />-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cardList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>