<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    android:padding="@dimen/margin_10dp">

    <TextView
        style="@style/Voter_Label_Detail_Text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:gravity="center"
        android:text="Select Status " />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_neutral"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50dp"
            android:padding="@dimen/margin_10dp"
            android:text="@string/neutral_vote"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/text_18sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:id="@+id/radio_tentative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50dp"
            android:padding="@dimen/margin_10dp"
            android:text="@string/tentative_vote"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/text_18sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:id="@+id/radio_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50dp"
            android:padding="@dimen/margin_10dp"
            android:text="@string/confirm_vote"
            android:textColor="@color/md_black_1000"
            android:theme="@style/MyRadioButton"
            android:textSize="@dimen/text_18sp" />

        <RadioButton
            android:id="@+id/radio_never"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50dp"
            android:padding="@dimen/margin_10dp"
            android:text="@string/never_going_to_vote"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/text_18sp"
            android:theme="@style/MyRadioButton" />
    </RadioGroup>


    <TextView
        android:id="@+id/txt_cancel"
        style="@style/Voter_Label_Detail_Text_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right|center"
        android:padding="@dimen/margin_10dp"
        android:text="Cancel" />

</LinearLayout>