<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:ignore="MissingPrefix"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Language"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_28sp"
            android:layout_gravity="center"
            android:singleLine="true"
            android:textAllCaps="false"
            fontPath="fonts/Roboto-Regular.ttf"
            android:gravity="center"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/rb_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:checked="false"
                android:text="@string/lang_english"
                fontPath="fonts/Roboto-Light.ttf"
                android:textSize="20sp" />
            <RadioButton
                android:id="@+id/rb_marathi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/lang_marathi"
                fontPath="fonts/Roboto-Light.ttf"
                android:textSize="20sp"/>
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:padding="5dp"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_20sp"
                fontPath="fonts/Roboto-Regular.ttf"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:padding="5dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_20sp"
                fontPath="fonts/Roboto-Regular.ttf"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>